--- a/WebApplicationTCC2/nbproject/project.properties
+++ b/WebApplicationTCC2/nbproject/project.properties
@@ -29,7 +29,14 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.cm.jar=cm.jar
-file.reference.org.eclipse.egit.github.core-4.7.0-SNAPSHOT.jar=org.eclipse.egit.github.core-4.7.0-SNAPSHOT.jar
+file.reference.commons-codec-1.7.jar=commons-codec-1.7.jar
+file.reference.commons-io-1.4.jar=commons-io-1.4.jar
+file.reference.commons-lang-2.6.jar=commons-lang-2.6.jar
+file.reference.github-api-1.84.jar=github-api-1.84.jar
+file.reference.jackson-annotations-2.2.3.jar=jackson-annotations-2.2.3.jar
+file.reference.jackson-core-2.2.3.jar=jackson-core-2.2.3.jar
+file.reference.jackson-databind-2.2.3.jar=jackson-databind-2.2.3.jar
+file.reference.org.eclipse.egit.github.core-4.8.0-SNAPSHOT.jar=org.eclipse.egit.github.core-4.8.0-SNAPSHOT.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -39,8 +46,15 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.serve
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.org.eclipse.egit.github.core-4.7.0-SNAPSHOT.jar}:\
-    ${file.reference.cm.jar}
+    ${file.reference.cm.jar}:\
+    ${file.reference.org.eclipse.egit.github.core-4.8.0-SNAPSHOT.jar}:\
+    ${file.reference.github-api-1.84.jar}:\
+    ${file.reference.jackson-databind-2.2.3.jar}:\
+    ${file.reference.jackson-core-2.2.3.jar}:\
+    ${file.reference.jackson-annotations-2.2.3.jar}:\
+    ${file.reference.commons-io-1.4.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-codec-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
